--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "keywords": ["presentation", "reveal.js", "rfl"],
   "author": "",
   "license": "ISC",
+  "homepage": "https://saim20.github.io/presentation/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Saim20/presentation.git"
+  },
   "dependencies": {
     "reveal.js": "^5.2.1"
   }
